# Auto-Deployment

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  agent_log.txt  deploy.yaml  dockerfile  dumy.py  lovable-mcp.yaml  main.py  new.py  package-lock.json  package.json  pyproject.toml  requirments.txt  trial.py
.claude/: settings.local.json
chims_deployment/: __init__.py  server.py
chims_deployment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chroma_db/72768aea-4403-4f27-ad09-7b522fd70e2e/: index_metadata.pickle
deployagent/: __main__.py  cli.py
deployagent-mcp/: requirements.txt  server.py
deployagent/aws/: alb.py  cfn.py  cloudwatch.py  ecr.py  ecs.py
deployagent/engine/: deployer.py  health.py  planner.py
deployagent/errors/: classifier.py  retry.py  rollback.py
deployagent/parser/: k8s_manifest.py  yaml_loader.py
deployagent/state/: store.py
deployagent/validator/: gemini_fixer.py  pipeline.py
devops-code-reviewer/: CHANGELOG.md  README.md  package-lock.json  package.json
devops-code-reviewer/src/: extension.ts
prototype/v0-mcp/: README.md  package-lock.json  package.json  server.js
prototype/v0-mcp/public/: index.html
test_docker_env/: Dockerfile  docker-compose.yml
