[project]
name = "deployagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "boto3>=1.34",
    "rich>=13",
    "pydantic>=2",
    "tenacity>=8",
    "pyyaml>=6",
    "python-dotenv>=1.0",
]

[project.scripts]
deployagent = "deployagent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deployagent*"]
